fix: adjust navbar mobile spacing

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -216,9 +216,9 @@
     .navbar {
         position: absolute;
         top: 100%;
-        left: 0;
+        left: 0px;
         width: 100%;
-        padding: 1rem 5%;
+        padding: 2rem 50px;
         background: var(--bg-color);
         border-top: .1rem solid rgba(0, 0, 0, .2);
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
